# cameraunlock-core

./: .gitattributes  AGENTS.md  README.md
.github/workflows/: release-bepinex-mod.yml
cpp/: CMakeLists.txt
cpp/include/cameraunlock/data/: position_settings.h
cpp/include/cameraunlock/discovery/: camera_discovery.h  float_classifier.h
cpp/include/cameraunlock/math/: quat4.h  smoothing_utils.h
cpp/include/cameraunlock/memory/: rtti_vtable.h
cpp/include/cameraunlock/processing/: pose_interpolator.h  position_interpolator.h  position_processor.h  tracking_processor.h
cpp/include/cameraunlock/reframework/: game_state_probing.h  log_callback.h  managed_utils.h  re_math.h  tdb_inspector.h
cpp/include/cameraunlock/rendering/: gui_marker_compensation.h
cpp/src/discovery/: camera_discovery.cpp  float_classifier.cpp
cpp/src/memory/: rtti_vtable.cpp
cpp/src/processing/: tracking_processor.cpp
cpp/src/reframework/: game_state_probing.cpp  log_callback.cpp  managed_utils.cpp  tdb_inspector.cpp
csharp/src/CameraUnlock.Core.Tests/Data/: PositionDataTests.cs  Vec3Tests.cs
csharp/src/CameraUnlock.Core.Tests/Math/: QuaternionUtilsTests.cs  SmoothingUtilsTests.cs
csharp/src/CameraUnlock.Core.Tests/Processing/: CenterOffsetManagerTests.cs  NeckModelTests.cs  PoseInterpolatorTests.cs  PositionInterpolatorTests.cs  PositionProcessorTests.cs  SmoothedEulerStateTests.cs  TrackingProcessorTests.cs
csharp/src/CameraUnlock.Core.Tests/Protocol/: OpenTrackPacketPositionTests.cs
csharp/src/CameraUnlock.Core.Unity/: CameraUnlock.Core.Unity.csproj
csharp/src/CameraUnlock.Core.Unity.BepInEx/Config/: HeadTrackingConfigBase.cs
csharp/src/CameraUnlock.Core.Unity/Extensions/: CanvasCompensation.cs  UnitySmoothingHelper.cs
csharp/src/CameraUnlock.Core.Unity/Rendering/: RenderPipelineHelper.cs
csharp/src/CameraUnlock.Core.Unity/Tracking/: SmoothedRotationState.cs  ViewMatrixModifier.cs
csharp/src/CameraUnlock.Core.Unity/Utilities/: CrosshairUtility.cs
csharp/src/CameraUnlock.Core/Config/: HeadTrackingConfigData.cs  IHeadTrackingConfig.cs
csharp/src/CameraUnlock.Core/Data/: NeckModelSettings.cs  PositionData.cs  PositionSettings.cs  Vec3.cs
csharp/src/CameraUnlock.Core/Math/: QuaternionUtils.cs  SmoothingUtils.cs
csharp/src/CameraUnlock.Core/Processing/: CenterOffsetManager.cs  ITrackingProcessor.cs  NeckModel.cs  PoseInterpolator.cs  PositionInterpolator.cs  PositionProcessor.cs  SmoothedEulerState.cs  TrackingProcessor.cs
csharp/src/CameraUnlock.Core/Protocol/: OpenTrackPacket.cs  OpenTrackReceiver.cs
csharp/src/CameraUnlock.Core/Tracking/: StaticHeadTrackingCore.cs
data/: games.json
powershell/: GamePathDetection.psm1  ModLoaderSetup.psm1  ReleaseWorkflow.psm1
scripts/: find-game.ps1  generate-release-notes.ps1  package-bepinex-mod.ps1
scripts/templates/: fetch-latest.ps1  install-asi.cmd  install-cecil.cmd  install-melonloader.cmd  install-reframework.cmd  install-shim.cmd  install.cmd  uninstall.cmd  update-deps.ps1
